[build-system]
requires = [ "setuptools>=64.0", "setuptools_scm[toml]>=6.2" ]
build-backend = "setuptools.build_meta"

[project]
name = "dolphin"
description = "Workflows for generating surface displacement maps using InSAR"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "ruamel.yaml",
    "yamale",
    "h5py",
    "pymp-pypi",
    # TODO: worth adding these, even though they should be through conda?
    # "gdal",
    # "numba",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License = file : LICENSE",
    "Operating System :: OS Independent",
]
dynamic = [
  "version",
]

[project.scripts]
dolphin = "dolphin.workflows.s1_disp:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "flake8",
    # mkdocs requirements
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
]


[project.urls]
Homepage = "https://github.com/opera-adt/dolphin"
"Bug Tracker" = "https://github.com/opera-adt/dolphin/issues"



[tool.setuptools_scm]
# https://github.com/pypa/setuptools_scm#configuration-parameters
write_to = "src/dolphin/version.py"
# https://github.com/pypa/setuptools_scm#version-number-construction
version_scheme = "no-guess-dev"  # Will not guess the next version


[tool.black]
target-version = ["py38", "py39", "py310"]
preview = true

[tool.isort]
profile = "black"
known_first_party = ["dolphin"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pydocstyle]
ignore = "D100,D102,D104,D105,D203,D204,D213,D413"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=scripts --ignore=docs"
