[metadata]
name = compass
version = attr: compass.__version__
description = A Package to Generate Coregistered Multi-temporal SAR SLC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/COMPASS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License = file : LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    setuptools
    importlib_resources

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    s1_cslc.py = compass.s1_cslc:main
