[metadata]
name = atlas
version = attr: atlas.__version__
description = Workflows for generating surface displacement maps using InSAR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/atlas
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License = file : LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    setuptools
    importlib_resources

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
    # atlas = atlas:main
