[metadata]
name = dolphin
version = 0.1.0
description = Workflows for generating surface displacement maps using InSAR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/dolphin
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License = file : LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    setuptools
    importlib_resources
    numpy
    ruamel.yaml
    yamale


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dolphin = dolphin.s1_disp:main


[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install dolphin[dev]`
dev =
    pytest
    pre-commit
    black
    flake8
